Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectNumObj.quorum
class Main
    action Main
        Number n
        Object o        
        n:SetValue(7.5)
        o = cast(Object, n)
        if o:Equals(n)
            output "passed"
        end
    end
end
