Quorum/Library/Tests/TypeChecker/Fail/ExpAssignTextObjNumberField.quorum
class main
    Text txt
    action Main
        txt = cast(Text, 7.5)
    end
end